<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Калькулятор</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_C">C</string>
    <string name="button_point">.</string>
    <string name="button_equals">=</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">*</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="text_style">bold</string>

    <string name="output_screen_starting_value">0</string>
    <string name="button_percent">%</string>
    <string name="button_square">√</string>

    <string name="description_text">Настройки приложения</string>
    <string name="theme_switch_text">Тёмная тема</string>
    <string name="button_back_text"><![CDATA[< Назад]]></string>

    <string name="point_template">.%s</string>
</resources>