<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:scaleX="1.9"
        android:scaleY="1.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_image" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_description"
        android:text="@string/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/settings_text_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/OutputScreen" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/night_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_switch_text"
        android:textColor="@color/output_screens_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/night_mode_switch"
        android:backgroundTint="@color/button_func"
        android:textStyle="normal"
        android:textSize="@dimen/settings_button_text_size"
        style="@style/ButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>